# web_push_fwd

./: .gitignore  Cargo.toml  README.md
migrations/: 20230825180703_create_table.sql
src/: fcm.rs  jwt.rs  lib.rs  main.rs  scheme.rs  server.rs  webpush.rs
