[package]
name = "web_push_fwd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.2"
chrono = "0.4.26"
dotenv = "0.15.0"
fern = "0.6.2"
hyper = "0.14.27"
hyper-tls = "0.5.0"
log = "0.4.20"
openssl = "0.10.56"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.32.0", features = ["full"] }
ulid = "1.0.0"
yup-oauth2 = "8.3.0"
